tests/mm0_mmu/fail/bad-sort1432.mmu
-- bad modifier order
(sort s1432 pure free provable strict)